--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,13 @@
 /* green :  #139929 */
 
 /* input */
-
+input {
+  border: 1px solid #979797;
+  box-sizing: border-box;
+  border-radius: 5px;
+  padding: 17px;
+  font-size: 16px;
+}
 /* button */
 
 * {
