--- a/src/RegisterLoginContainer/RegisterLogin.scss
+++ b/src/RegisterLoginContainer/RegisterLogin.scss
@@ -1,5 +1,6 @@
 .loginContainer {
   width: 40%;
+  margin-top: 10%;
   margin-left: 30%;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -16,5 +17,5 @@
 
 #registerBox {
   border: 1px solid red;
-  background-color: "red";
+  background-color: red;
 }
