--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,35 @@ input {
   font-family: 'Mulish', sans-serif;
 }
 
+
+.h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.75rem;
+  line-height: 35px;
+}
+.h3 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.25rem;
+  line-height: 25px;
+}
+.h4 {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1rem;
+  line-height: 20px;
+}
+
+.titleContainer {
+  align-items: flex-start;
+}
+
+.links {
+  text-decoration: none;
+  color: black;
+}
+
 .frames {
   border: 1px solid;
   height: 200px;
