--- a/src/HomeContainer/Home.scss
+++ b/src/HomeContainer/Home.scss
@@ -1,15 +1,14 @@
 .homeContainer {
   width: 80%;
   margin-left: 10%;
-  .title {
-    font-size: 28px;
-    font-weight: bold;
-    margin-top: 40px;
-    margin-left: 5%;
-  }
+  margin-top: 5%;
+  margin-bottom: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   .subtitle {
     margin-top: 22px;
-    margin-left: 5%;
   }
   .electrifyContainer {
     display: flex;
