--- a/src/Nav/Nav.scss
+++ b/src/Nav/Nav.scss
@@ -21,7 +21,7 @@
     justify-content: center;
     align-items: center;
     .navItemText {
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 400;
       text-decoration: none;
     }
