--- a/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
+++ b/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
@@ -59,3 +59,29 @@
     margin-top: 10px;
   }
 }
+
+// house create
+.createContainer {
+  display: flex;
+  flex-direction: column;
+  .createTitle {
+    margin: 6% auto 6% 20%;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .createBox {
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    margin-left: 30%;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    padding: 40px;
+  }
+  .frames {
+    height: 280px;
+    border: 1px green 1px;
+  }
+}
