--- a/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
+++ b/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
@@ -1,3 +1,6 @@
+// @import "~bootstrap/scss/bootstrap";
+
+
 .myCasaContainer{
   width: 80%;
   margin-left: 10%;
@@ -91,6 +94,14 @@
     margin-top: 10px;
     color: #FA910B;
   }
+  .updateContainer {
+    display: flex;
+  }
+  .postedInfo {
+    .spanNext {
+      margin-left: 10px;
+    }
+  }
 }
 
 // house create
@@ -115,30 +126,19 @@
   }
   .frames {
     display: flex;
-    padding-left: 37%;
     height: 280px;
     border: 1px dashed #979797;
     box-sizing: border-box;
     border-radius: 10px;
-    // position: absolute;
     .imgAttached {
       height: 100%;
       width: 100%;
       cursor: pointer;
+      border-radius: 10px;
     }
-    .upload {
-
-    }
-    .fileUpload {
-        // border: 1px solid red;
-        width: 10%;
-        // height: 100px;
-        display: inline-block;
-        overflow: hidden;
-        opacity: 0;
-        position: relative;
-        z-index: 1;
-    }
+  }
+  .fileUpload {
+      display: none;
   }
   .helpContainer {
     display: flex;
@@ -224,16 +224,10 @@
       cursor: pointer;
       border-radius: 10px;
     }
-    .fileUpload {
-      // border: 1px solid red;
-      width: 10%;
-      // height: 100px;
-      display: inline-block;
-      overflow: hidden;
-      opacity: 0;
-      position: relative;
-      z-index: 1;
-    }
+  }
+  .fileUpload {
+    border: 1px solid red;
+    display: none;
   }
   .inputContainer {
     display: flex;
@@ -244,7 +238,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 50px;
     width: 100%;
     .inputItem {
       display: flex;
@@ -252,4 +245,18 @@
       width: 45%;
     }
   }
+}
+
+// REACT BOOTSTRAP
+.toggle {
+  text-decoration: none;
+  border: 1px white;
+  background-color: white;
+}
+.header {
+  background-color: white;
+  border-style: hidden;
+}
+.card {
+  border-style: hidden;
 }
