--- a/src/MyProjectComponents/MyProject.scss
+++ b/src/MyProjectComponents/MyProject.scss
@@ -12,3 +12,78 @@
     color: #979797;
   }
 }
+
+.examContainer {
+  width: 60%;
+  margin-left: 20%;
+  margin-top: 5%;
+  margin-bottom: 10%;
+  .gradeContainer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
+    .myGrade {
+      border: 1px solid green;
+      height: 200px;
+      .measureContainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+        border: 1px red solid;
+        .measureItem {
+          border: 1px blue solid;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
+      }
+    }
+    .componentsMark {
+      border: 1px pink solid;
+      height: 200px;
+      display: flex;
+      flex-direction: column;
+      .componentContainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        .componentCol {
+          margin-left: 20px;
+          margin-right: 20px;
+          .markContainer {
+            margin-top: 2px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            .markName {
+              margin-left: 10px;
+              margin-right: 10px;
+            }
+            .markStatus {
+              margin-left: 10px;
+            }
+          }
+        }
+      }
+    }
+    .analysis {
+      border: 1px aqua solid;
+      .analysisSection {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .analysisName {
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
+
+.marks {
+  height: 20px;
+  width: 20px;
+}
