--- a/src/MyAccountComponents/MyAccount.scss
+++ b/src/MyAccountComponents/MyAccount.scss
@@ -17,3 +17,17 @@
     }
   }
 }
+
+.deleteAccBtn {
+  background-color: #FDC825;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border-radius: 5px;
+  font-size: 18px;
+  font-weight: 900;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  border: none;
+}
