--- a/src/Nav/Nav.scss
+++ b/src/Nav/Nav.scss
@@ -39,3 +39,12 @@
     margin-left: 10px;
   }
 }
+
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .navContainer {
+    height: 12vh;
+    width: auto;
+  }
+}
