--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  body {
+    width: 768px;
+  }
+}
+
+@media only screen and (max-width: 823px) {
+  /* For mobile phones: */
+  body {
+    width: auto;
+  }
+}
