--- a/src/MainContainer/Main.scss
+++ b/src/MainContainer/Main.scss
@@ -1,80 +1,250 @@
-.readfirst {
-  background: #007AFF;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+.mainContainer {
+      .readfirst {
+        background: #007AFF;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
-.section_one_container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 90%;
-  margin-top: 5%;
-  margin-left: 5%;
-  .col_two {
-    margin-top: 7%;
-  }
-  #h1 {
-    font-size: 36px;
-    margin-left: 2%;
-    margin-right: 2%;
-    // margin-bottom: 4%;
-    text-align: center;
-  }
-  #text {
-    font-size: 16px;
-    padding: 7%;
+    .section_one_container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 90%;
+        margin-top: 5%;
+        margin-left: 5%;
+        .col_two {
+          margin-top: 7%;
+        }
+      #h1 {
+        font-size: 36px;
+        margin-left: 2%;
+        margin-right: 2%;
+        // margin-bottom: 4%;
+        text-align: center;
+      }
+      #text {
+        font-size: 16px;
+        padding: 7%;
 
-  }
-  #btn {
-    width: 60%;
-    margin-left: 20%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    border-radius: 5px;
-    background: #139929;
-    text-align: center;
+      }
+      #btn {
+        width: 60%;
+        margin-left: 20%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+        border-radius: 5px;
+        background: #139929;
+        text-align: center;
 
-  }
-  .linkBtn {
-    color: white;
-    text-decoration: none;
-    font-weight: 900;
-    font-size: 18px;
-  }
-}
-
-.section_two_container {
-  margin-top: 15%;
-  margin-bottom: 100px;
-  width: 40%;
-  .col_one {
-
-  }
-  .col_two {
-    margin-top: 8%;
-    text-align: center;
-    #h1 {
-    font-weight: bold;
-    font-size: 28px;
-    width: 80%;
-    margin-left: 10%;
+      }
+      .linkBtn {
+        color: white;
+        text-decoration: none;
+        font-weight: 900;
+        font-size: 18px;
+      }
     }
-    #text {
-    margin-top: 8%;
-    margin-left: 10%;
-    text-align: left;
-    width: 80%;
 
+    .section_two_container {
+      margin-top: 15%;
+      margin-bottom: 100px;
+      width: 40%;
+      .col_one {
+
+      }
+      .col_two {
+        margin-top: 8%;
+        text-align: center;
+        #h1 {
+        font-weight: bold;
+        font-size: 28px;
+        width: 80%;
+        margin-left: 10%;
+        }
+        #text {
+        margin-top: 8%;
+        margin-left: 10%;
+        text-align: left;
+        width: 80%;
+
+        }
+      }
     }
-  }
+    .left {
+      margin-left: 10%;
+    }
+
+    .right  {
+      margin-left: 50%;
+    }
 }
-.left {
-  margin-left: 10%;
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .mainContainer {
+      // border: 1px red solid;
+      display: flex;
+      flex-direction: column;
+      .section_one_container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        img {
+          width: 100%;
+        }
+      }
+      .section_two_container {
+        margin-top: 15%;
+        margin-bottom: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        // border: 1px blue solid;
+        img {
+          width: 100%;
+        }
+      }
+
+      .left {
+        margin-left: 0%;
+      }
+
+      .right  {
+        margin-left: 0%;
+      }
+    }
 }
 
-.right  {
-  margin-left: 50%;
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+
+}
+
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+
+}
+
+/* ----------- iPhone 6, 6S, 7 and 8 ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+
+}
+
+/* ----------- iPhone 6+, 7+ and 8+ ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 414px)
+  and (max-device-width: 736px)
+  and (-webkit-min-device-pixel-ratio: 3) {
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 414px)
+  and (max-device-width: 736px)
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) {
+
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 414px)
+  and (max-device-width: 736px)
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) {
+
+}
+
+/* ----------- iPhone X ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3) {
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) {
+
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) {
+
 }
