--- a/src/MyAccountComponents/MyAccount.scss
+++ b/src/MyAccountComponents/MyAccount.scss
@@ -31,3 +31,18 @@
   padding-bottom: 3%;
   border: none;
 }
+
+.ViewTermsOfUseContainer {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-left: 10%;
+  .title {
+    margin-top: 5%;
+  }
+  .agreementContainer {
+    .p {
+      margin-top: 3%;
+    }
+  }
+}
