--- a/src/MyProjectComponents/MyProject.scss
+++ b/src/MyProjectComponents/MyProject.scss
@@ -295,3 +295,44 @@
     }
   }
 }
+
+.progressbar_grade {
+  width: 100%;
+  .indicator {
+    width: 17%;
+  }
+  .bar {
+    width: 100%;
+    height: 23px;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    .red {
+        width: 25%;
+        height: 100%;
+        background-color: #D22E2E;
+        float: left;
+    }
+    .orange {
+        width: 25%;
+        height: 100%;
+        background-color: #FA910B;
+        float: left;
+    }
+
+    .yellow {
+        width: 25%;
+        height: 100%;
+        background-color: #FDC825;
+        float: left;
+
+    }
+    .green {
+        width: 25%;
+        height: 100%;
+        background-color: #139929;
+        float: left;
+
+    }
+  }
+}
