--- a/src/MyProjectComponents/MyProject.scss
+++ b/src/MyProjectComponents/MyProject.scss
@@ -13,326 +13,326 @@
   }
 }
 
-.examContainer {
-  width: 60%;
-  margin-left: 20%;
-  margin-top: 5%;
-  margin-bottom: 10%;
-  .gradeContainer {
-    display: flex;
-    flex-direction: column;
-    margin-top: 5%;
-    .myGrade {
-      border-bottom: 1px solid #E9E9E9;
-      height: 250px;
-      .measureContainer {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        .measureItem {
-          margin-left: 2%;
-          margin-right: 2%;
-          display: flex;
-          flex-direction: column;
-          // justify-content: center;
-          align-items: center;
-          label {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-          }
-          .atticGrade, .spGradeLetter {
-            font-weight: 800;
-            font-size: 64px;
-            margin-top: 0;
-          }
-        }
-      }
-    }
-    .componentsMark {
-      border-bottom: 1px solid #E9E9E9;
-      height: 200px;
-      display: flex;
-      flex-direction: column;
-      margin-top: 2%;
-      .componentContainer {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        .componentCol {
-          margin-left: 20px;
-          margin-right: 20px;
-          .markContainer {
-            margin-top: 2px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            .markName {
-              margin-left: 10px;
-              margin-right: 10px;
-            }
-            .markStatus {
-              margin-left: 10px;
-            }
-          }
-        }
-      }
-    }
-    .analysis {
-      border: 1px aqua solid;
-      .analysisSection {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-
-        .analysisName {
-          font-weight: bold;
-          align-self: center;
-        }
-      }
-    }
-  }
-}
-.recommendations {
-  padding-top: 5%;
-  .recommendation {
-    margin-top: 10px;
-    .replaceYr {
-      border: 2px solid #D22E2E;
-      padding: 4px;
-    }
-    .replaceTitle {
-      margin-left: 20px;
-    }
-  }
-}
-
-.marks {
-  height: 20px;
-  width: 20px;
-}
-
-.progressbar {
-  border: 1px solid blue;
-  width: 100%;
-  .indicator {
-    width: 2%;
-  }
-  .bar {
-    width: 100%;
-    height: 20px;
-    border-radius: 10px;
-    color: white;
-    text-align: center;
-    .red {
-        width: 4%;
-        height: 100%;
-        background-color: #D22E2E;
-        float: left;
-    }
-    .orange {
-        width: 32%;
-        height: 100%;
-        background-color: #FA910B;
-        float: left;
-    }
-
-    .yellow {
-        width: 32%;
-        height: 100%;
-        background-color: #FDC825;
-        float: left;
-
-    }
-    .green {
-        width: 32%;
-        height: 100%;
-        background-color: #139929;
-        float: left;
-
-    }
-  }
-  .inches {
-    width: 100%;
-    height: 30px;
-    .redIn {
-        width: 4%;
-        height: 100%;
-        float: left;
-
-    }
-    .orangeIn {
-        width: 32%;
-        height: 100%;
-        float: left;
-        padding-left: 12%;
-    }
-    .yellowIn {
-        width: 32%;
-        height: 100%;
-        float: left;
-        padding-left: 12%;
-    }
-    .greenIn {
-        width: 32%;
-        height: 100%;
-        float: left;
-        padding-left: 12%;
-    }
-  }
-}
-
-.progressbar2 {
-  border: 1px solid red;
-  width: 100%;
-  .indicator {
-    width: 2%;
-  }
-  .bar {
-    width: 100%;
-    height: 20px;
-    border-radius: 10px;
-    color: white;
-    text-align: center;
-    .orange {
-        width: 34%;
-        height: 100%;
-        background-color: #FA910B;
-        float: left;
-    }
-    .yellow {
-        width: 33%;
-        height: 100%;
-        background-color: #FDC825;
-        float: left;
-
-    }
-    .green {
-        width: 33%;
-        height: 100%;
-        background-color: #139929;
-        float: left;
-
-    }
-  }
-  .inches {
-    width: 100%;
-    height: 30px;
-    .orangeIn {
-        width: 32%;
-        height: 100%;
-        float: left;
-        padding-left: 10%;
-    }
-    .yellowIn {
-        width: 32%;
-        height: 100%;
-        float: left;
-        padding-left: 10%;
-    }
-    .greenIn {
-        width: 32%;
-        height: 100%;
-        float: left;
-        padding-left: 12%;
-    }
-  }
-}
-
-.progressbar3 {
-  border: 1px solid red;
-  width: 100%;
-  .indicator {
-    width: 2%;
-  }
-  .bar {
-    width: 100%;
-    height: 20px;
-    border-radius: 10px;
-    color: white;
-    text-align: center;
-    .orange {
-        width: 34%;
-        height: 100%;
-        background-color: #FA910B;
-        float: left;
-    }
-    .yellow {
-        width: 33%;
-        height: 100%;
-        background-color: #FDC825;
-        float: left;
-    }
-    .green {
-        width: 33%;
-        height: 100%;
-        background-color: #139929;
-        float: left;
-
-    }
-  }
-  .inches {
-    width: 100%;
-    height: 30px;
-    .orangeIn {
-        width: 32%;
-        height: 100%;
-        float: left;
-        padding-left: 13%;
-    }
-    .yellowIn {
-        width: 32%;
-        height: 100%;
-        float: left;
-        padding-left: 14%;
-    }
-    .greenIn {
-        width: 32%;
-        height: 100%;
-        float: left;
-        padding-left: 12%;
-    }
-  }
-}
-
-.progressbar_grade {
-  width: 100%;
-  .indicator {
-    width: 17%;
-  }
-  .bar {
-    width: 100%;
-    height: 23px;
-    border-radius: 10px;
-    color: white;
-    text-align: center;
-    .red {
-        width: 25%;
-        height: 100%;
-        background-color: #D22E2E;
-        float: left;
-    }
-    .orange {
-        width: 25%;
-        height: 100%;
-        background-color: #FA910B;
-        float: left;
-    }
-
-    .yellow {
-        width: 25%;
-        height: 100%;
-        background-color: #FDC825;
-        float: left;
-
-    }
-    .green {
-        width: 25%;
-        height: 100%;
-        background-color: #139929;
-        float: left;
-
-    }
-  }
-}
+// .examContainer {
+//   width: 60%;
+//   margin-left: 20%;
+//   margin-top: 5%;
+//   margin-bottom: 10%;
+//   .gradeContainer {
+//     display: flex;
+//     flex-direction: column;
+//     margin-top: 5%;
+//     .myGrade {
+//       border-bottom: 1px solid #E9E9E9;
+//       height: 250px;
+//       .measureContainer {
+//         display: flex;
+//         flex-direction: row;
+//         justify-content: center;
+//         .measureItem {
+//           margin-left: 2%;
+//           margin-right: 2%;
+//           display: flex;
+//           flex-direction: column;
+//           // justify-content: center;
+//           align-items: center;
+//           label {
+//             display: flex;
+//             flex-direction: column;
+//             justify-content: center;
+//             align-items: center;
+//           }
+//           .atticGrade, .spGradeLetter {
+//             font-weight: 800;
+//             font-size: 64px;
+//             margin-top: 0;
+//           }
+//         }
+//       }
+//     }
+//     .componentsMark {
+//       border-bottom: 1px solid #E9E9E9;
+//       height: 200px;
+//       display: flex;
+//       flex-direction: column;
+//       margin-top: 2%;
+//       .componentContainer {
+//         display: flex;
+//         flex-direction: row;
+//         justify-content: center;
+//         .componentCol {
+//           margin-left: 20px;
+//           margin-right: 20px;
+//           .markContainer {
+//             margin-top: 2px;
+//             display: flex;
+//             flex-direction: row;
+//             justify-content: space-between;
+//             .markName {
+//               margin-left: 10px;
+//               margin-right: 10px;
+//             }
+//             .markStatus {
+//               margin-left: 10px;
+//             }
+//           }
+//         }
+//       }
+//     }
+//     .analysis {
+//       border: 1px aqua solid;
+//       .analysisSection {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//
+//         .analysisName {
+//           font-weight: bold;
+//           align-self: center;
+//         }
+//       }
+//     }
+//   }
+// }
+// .recommendations {
+//   padding-top: 5%;
+//   .recommendation {
+//     margin-top: 10px;
+//     .replaceYr {
+//       border: 2px solid #D22E2E;
+//       padding: 4px;
+//     }
+//     .replaceTitle {
+//       margin-left: 20px;
+//     }
+//   }
+// }
+//
+// .marks {
+//   height: 20px;
+//   width: 20px;
+// }
+//
+// .progressbar {
+//   border: 1px solid blue;
+//   width: 100%;
+//   .indicator {
+//     width: 2%;
+//   }
+//   .bar {
+//     width: 100%;
+//     height: 20px;
+//     border-radius: 10px;
+//     color: white;
+//     text-align: center;
+//     .red {
+//         width: 4%;
+//         height: 100%;
+//         background-color: #D22E2E;
+//         float: left;
+//     }
+//     .orange {
+//         width: 32%;
+//         height: 100%;
+//         background-color: #FA910B;
+//         float: left;
+//     }
+//
+//     .yellow {
+//         width: 32%;
+//         height: 100%;
+//         background-color: #FDC825;
+//         float: left;
+//
+//     }
+//     .green {
+//         width: 32%;
+//         height: 100%;
+//         background-color: #139929;
+//         float: left;
+//
+//     }
+//   }
+//   .inches {
+//     width: 100%;
+//     height: 30px;
+//     .redIn {
+//         width: 4%;
+//         height: 100%;
+//         float: left;
+//
+//     }
+//     .orangeIn {
+//         width: 32%;
+//         height: 100%;
+//         float: left;
+//         padding-left: 12%;
+//     }
+//     .yellowIn {
+//         width: 32%;
+//         height: 100%;
+//         float: left;
+//         padding-left: 12%;
+//     }
+//     .greenIn {
+//         width: 32%;
+//         height: 100%;
+//         float: left;
+//         padding-left: 12%;
+//     }
+//   }
+// }
+//
+// .progressbar2 {
+//   border: 1px solid red;
+//   width: 100%;
+//   .indicator {
+//     width: 2%;
+//   }
+//   .bar {
+//     width: 100%;
+//     height: 20px;
+//     border-radius: 10px;
+//     color: white;
+//     text-align: center;
+//     .orange {
+//         width: 34%;
+//         height: 100%;
+//         background-color: #FA910B;
+//         float: left;
+//     }
+//     .yellow {
+//         width: 33%;
+//         height: 100%;
+//         background-color: #FDC825;
+//         float: left;
+//
+//     }
+//     .green {
+//         width: 33%;
+//         height: 100%;
+//         background-color: #139929;
+//         float: left;
+//
+//     }
+//   }
+//   .inches {
+//     width: 100%;
+//     height: 30px;
+//     .orangeIn {
+//         width: 32%;
+//         height: 100%;
+//         float: left;
+//         padding-left: 10%;
+//     }
+//     .yellowIn {
+//         width: 32%;
+//         height: 100%;
+//         float: left;
+//         padding-left: 10%;
+//     }
+//     .greenIn {
+//         width: 32%;
+//         height: 100%;
+//         float: left;
+//         padding-left: 12%;
+//     }
+//   }
+// }
+//
+// .progressbar3 {
+//   border: 1px solid red;
+//   width: 100%;
+//   .indicator {
+//     width: 2%;
+//   }
+//   .bar {
+//     width: 100%;
+//     height: 20px;
+//     border-radius: 10px;
+//     color: white;
+//     text-align: center;
+//     .orange {
+//         width: 34%;
+//         height: 100%;
+//         background-color: #FA910B;
+//         float: left;
+//     }
+//     .yellow {
+//         width: 33%;
+//         height: 100%;
+//         background-color: #FDC825;
+//         float: left;
+//     }
+//     .green {
+//         width: 33%;
+//         height: 100%;
+//         background-color: #139929;
+//         float: left;
+//
+//     }
+//   }
+//   .inches {
+//     width: 100%;
+//     height: 30px;
+//     .orangeIn {
+//         width: 32%;
+//         height: 100%;
+//         float: left;
+//         padding-left: 13%;
+//     }
+//     .yellowIn {
+//         width: 32%;
+//         height: 100%;
+//         float: left;
+//         padding-left: 14%;
+//     }
+//     .greenIn {
+//         width: 32%;
+//         height: 100%;
+//         float: left;
+//         padding-left: 12%;
+//     }
+//   }
+// }
+//
+// .progressbar_grade {
+//   width: 100%;
+//   .indicator {
+//     width: 17%;
+//   }
+//   .bar {
+//     width: 100%;
+//     height: 23px;
+//     border-radius: 10px;
+//     color: white;
+//     text-align: center;
+//     .red {
+//         width: 25%;
+//         height: 100%;
+//         background-color: #D22E2E;
+//         float: left;
+//     }
+//     .orange {
+//         width: 25%;
+//         height: 100%;
+//         background-color: #FA910B;
+//         float: left;
+//     }
+//
+//     .yellow {
+//         width: 25%;
+//         height: 100%;
+//         background-color: #FDC825;
+//         float: left;
+//
+//     }
+//     .green {
+//         width: 25%;
+//         height: 100%;
+//         background-color: #139929;
+//         float: left;
+//
+//     }
+//   }
+// }
