--- a/src/MyProjectComponents/MyProject.scss
+++ b/src/MyProjectComponents/MyProject.scss
@@ -23,58 +23,92 @@
     display: flex;
     flex-direction: column;
     margin-top: 5%;
-    .myGrade {
+    .top {
       border-bottom: 1px solid #E9E9E9;
-      height: 250px;
+    }
+    .myGrade {
+      // border-bottom: 1px solid #E9E9E9;
+      width: 100%;
+      height: 600px;
+      display: flex;
+
+      .houseProfile {
+        width: 35%;
+        .houseProfileRow {
+          margin-top: 15%;
+          img {
+            width: 80%;
+            border-radius: 10%;
+          }
+          .houseText {
+            margin-top: 10%;
+          }
+        }
+      }
       .measureContainer {
         display: flex;
-        flex-direction: row;
-        justify-content: center;
-        .measureItem {
-          margin-left: 2%;
-          margin-right: 2%;
+        flex-direction: column;
+        width: 65%;
+        .downloadProject {
+          width: 4%;
+          margin-bottom: 5%;
+          margin-right: 15%;
+          align-self: flex-end;
+        }
+        .measureRow {
           display: flex;
-          flex-direction: column;
-          // justify-content: center;
-          align-items: center;
-          label {
+          justify-content: space-around;
+          height: 300px;
+          border-bottom: 1px solid #E9E9E9;
+          .measureItem {
+            margin-left: 2%;
+            margin-right: 2%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            // justify-content: center;
             align-items: center;
-          }
-          .atticGrade, .spGradeLetter {
-            font-weight: 800;
-            font-size: 64px;
-            margin-top: 0;
+            label {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            }
+            .atticGrade, .spGradeLetter {
+              font-weight: 800;
+              font-size: 64px;
+              margin-top: 0;
+            }
           }
         }
       }
     }
     .componentsMark {
-      border-bottom: 1px solid #E9E9E9;
+      // border-bottom: 1px solid #E9E9E9;
       height: 200px;
+      width: 100%;
       display: flex;
-      flex-direction: column;
       margin-top: 2%;
       .componentContainer {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        .componentCol {
-          margin-left: 20px;
-          margin-right: 20px;
-          .markContainer {
-            margin-top: 2px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            .markName {
-              margin-left: 10px;
-              margin-right: 10px;
-            }
-            .markStatus {
-              margin-left: 10px;
+        width: 100%;
+        .componentRow {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          margin-top: 5%;
+          .componentCol {
+            width: 42%;
+            .markContainer {
+              margin-top: 2px;
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              .markName {
+                margin-left: 10px;
+                margin-right: 10px;
+              }
+              .markStatus {
+                margin-left: 10px;
+              }
             }
           }
         }
